FE: Fix filter type selection z-index bug

--- a/frontend/scss/view/ideas.scss
+++ b/frontend/scss/view/ideas.scss
@@ -120,6 +120,7 @@
               z-index: 9999;
             }
           }
+          z-index: 9999;
           position:absolute;
           top:100%;
           left:-99999px;
